--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,9 @@
     <string name="scan">SCAN</string>
     <string name="stop">STOP</string>
     <string name="bluetooth_settings">Bluetooth settings</string>
+    <string name="filename">Enter filename to be stored as:</string>
+    <string name="OK">OK</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
